--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ node_js:
         - "6.0.0"
 services:
         - mongodb
+addons:
+        apt:
+                sources:
+                        - mongodb-3.2-precise
+                packages:
+                        - mongodb-org-server
